chore: change docussauru configs to use llama tokens

--- a/doc/src/css/custom.css
+++ b/doc/src/css/custom.css
@@ -1,3 +1,4 @@
+/* stylelint-disable docusaurus/copyright-header */
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
@@ -6,23 +7,37 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #006fbe;
+  --ifm-color-primary-dark: #004170;
+  --ifm-color-primary-darker: #004170;
+  --ifm-color-primary-light: ##b5d8f0;
+  --ifm-color-primary-lighter: #7dbae5;
+  --ifm-color-primary-lightest: #2d8fd5;
   --ifm-code-font-size: 95%;
 }
 
 .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
 
-html[data-theme='dark'] .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.3);
+.navbar__inner {
+  margin: 0 auto;
+  max-width: var(--ifm-container-width);
+  width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .navbar__inner {
+    margin: 0 auto;
+    width: 100%;
+    max-width: var(--ifm-container-width-xl);
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu {
+    margin-left: 32px;
+  }
 }
