--- a/cli/src/template/README.md.hbs
+++ b/cli/src/template/README.md.hbs
@@ -1,11 +1,31 @@
---- sidebar_position: 2 title: %COMPONENT% --- # %COMPONENT% Component ##
+---
+  sidebar_position: 2
+  title: %COMPONENT%
+---
+
+# %COMPONENT% Component
+
 Descrição Mussum Ipsum, cacilds vidis litro abertis. Viva Forevis aptent taciti
 sociosqu ad litora torquent. Mé faiz elementum girarzis, nisi eros vermeio.
 Atirei o pau no gatis, per gatis num morreus. Cevadis im ampola pa arma uma
-pindureta. ## Instalação Caso, queira pode importar direto do
-`@retriver-ui/react` ```shell npm install @llama-ui/%PACKAGE% ``` ```shell yarn
-add @llama-ui/%PACKAGE% ``` ## Utilização ```tsx // app.tsx import React from
-'react' import { RetrieverProvider, %COMPONENT% } from '@llama-ui/react' //
-import Flex from '@llama-ui/%PACKAGE%' const App = () => { return (
-<COMPONENT% />
-) } export default App ```
+pindureta.
+
+## Install 
+
+If want import directl from `@llama-ui/react`
+
+`shell npm install @llama-ui/theme-system `
+`shell yarn add @llama-ui/theme-system `
+
+## Usage
+
+```tsx
+// app.tsx
+import React from 'react'
+import { %COMPONENT% } from '@llama-ui/react'
+
+// import Flex from '@llama-ui/theme-system'
+const App = () => { return ( <%COMPONENT% /> ) }
+
+export default App
+```
