--- a/cli/src/template/src/%COMPONENT%.tsx.hbs
+++ b/cli/src/template/src/%COMPONENT%.tsx.hbs
@@ -1,15 +1,11 @@
 import React from 'react'
-import { llama, StylesProps } from '@llama-ui/system'
-import { HTMLLlama } from '@llama-ui/system/lib/llama'
 
-type RetrieverProps = Omit<StylesProps, 'as'> & HTMLLlama<'div'>
-
-export interface %COMPONENT%Props extends RetrieverProps {
+export interface %COMPONENT%Props extends any {
   children?: React.ReactNode
 }
 
 const %COMPONENT%: (props: %COMPONENT%Props) => JSX.Element = ({ children, ...rest }) => {
-  return <llama.div {...rest}>{children}</llama.div>
+  return <div {...rest}>{children}</div>
 }
 
 export default %COMPONENT%
