--- a/cli/src/template/test/%PACKAGE%.test.tsx.hbs
+++ b/cli/src/template/test/%PACKAGE%.test.tsx.hbs
@@ -1,12 +1,21 @@
-import React from 'react' import { axe } from 'jest-axe' import { render, screen
-} from '@testing-library/react' import { RetrieverProvider } from
-'@llama-ui/react' import { matchers } from '@emotion/jest' import %COMPONENT%
-from '../src/%COMPONENT%' expect.extend(matchers) const %COMPONENT%Render = (
-<RetrieverProvider>
-  <COMPONENT% data-testid='%PACKAGE%-test'>%COMPONENT%</COMPONENT%>
-</RetrieverProvider>
-) describe('%COMPONENT%', () => { it('should render the %PACKAGE%', () => {
-render(%COMPONENT%Render)
-expect(screen.getByTestId('%PACKAGE%-test')).toBeTruthy() }) it('should validate
-accessibility', async () => { const { container } = render(%COMPONENT%Render)
-const result = await axe(container) expect(result).toHaveNoViolations() }) })
+import { matchers } from '@emotion/jest'
+import { render, screen } from '@testing-library/react'
+import { axe } from 'jest-axe'
+import React from 'react'
+expect.extend(matchers)
+
+const %COMPONENT%Render = (
+  <%COMPONENT% data-testid='%PACKAGE%-test'>%COMPONENT%</%COMPONENT%>
+)
+
+describe('%COMPONENT%', () => {
+  it('should render the theme-system', () => {
+    render(%COMPONENT%Render)
+    expect(screen.getByTestId('%PACKAGE%-test')).toBeTruthy()
+  })
+  it('should validate accessibility', async () => {
+    const { container } = render(%COMPONENT%Render)
+    const result = await axe(container)
+    expect(result).toHaveNoViolations()
+  })
+})
