fix: cli when create new components

--- a/cli/src/template/README.md.hbs
+++ b/cli/src/template/README.md.hbs
@@ -12,10 +12,10 @@ pindureta.
 
 ## Install 
 
-If want import directl from `@llama-ui/react`
+If want import directly from `@llama-ui/react`
 
-`shell npm install @llama-ui/theme-system `
-`shell yarn add @llama-ui/theme-system `
+`shell npm install @llama-ui/%PACKAGE%`
+`shell yarn add @llama-ui/%PACKAGE%`
 
 ## Usage
 
@@ -24,7 +24,7 @@ If want import directl from `@llama-ui/react`
 import React from 'react'
 import { %COMPONENT% } from '@llama-ui/react'
 
-// import Flex from '@llama-ui/theme-system'
+// import Flex from '@llama-ui/%PACKAGE%'
 const App = () => { return ( <%COMPONENT% /> ) }
 
 export default App
