--- a/cli/src/template/src/%PACKAGE%.tsx.hbs
+++ b/cli/src/template/src/%PACKAGE%.tsx.hbs
@@ -1,6 +1,6 @@
 import React from 'react'
 
-export interface %COMPONENT%Props extends any {
+export interface %COMPONENT%Props {
   children?: React.ReactNode
 }
 
