--- a/cli/src/template/test/%PACKAGE%.test.tsx.hbs
+++ b/cli/src/template/test/%PACKAGE%.test.tsx.hbs
@@ -4,6 +4,8 @@ import { axe } from 'jest-axe'
 import React from 'react'
 expect.extend(matchers)
 
+import %COMPONENT%, { %COMPONENT%Props } from '../src'
+
 const %COMPONENT%Render = (
   <%COMPONENT% data-testid='%PACKAGE%-test'>%COMPONENT%</%COMPONENT%>
 )
