--- a/cli/src/template/src/index.ts.hbs
+++ b/cli/src/template/src/index.ts.hbs
@@ -1,3 +1,3 @@
-export type { %COMPONENT%Props } from './%COMPONENT%'
-import %COMPONENT% from './%COMPONENT%'
+export type { %COMPONENT%Props } from './%PACKAGE%'
+import %COMPONENT% from './%PACKAGE%'
 export default %COMPONENT%
